--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+pip==21.0.1
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
+itsdangerous==1.1.0
 Flask==1.1.2
 gunicorn==20.0.4
 idna==2.10
 Jinja2==2.11.3
+MarkupSafe==1.1.1
 python-dotenv==0.15.0
 requests==2.25.1
+setuptools==52.0.0.post20210125
 urllib3==1.26.3
 Werkzeug==1.0.1
+wheel==0.36.2
 wincertstore==0.2
