--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ chardet==4.0.0
 click==7.1.2
 itsdangerous==1.1.0
 Flask==1.1.2
-gunicorn==20.0.4
+waitress==2.0.0
 idna==2.10
 Jinja2==2.11.3
 MarkupSafe==1.1.1
